# gRPCNvidia

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Host.sh  MANIFEST.in  README.md  docker-compose.yaml  nginx.conf  setup.cfg  setup.py
.github/workflows/: main.yml
Python/: Client.py  README.md  requirements.txt
gRPCNvidia/: __init__.py
inc/: AuthMiddleware.h  Client.h  GeminiCon.h  PythonIPC.h  Server.h  Service.h  ThreadManager.h  TransferData.h  base64.h
proto/: example.proto  route_guide.proto  services.proto
src/: AuthMiddleware.cc  GeminiCon.cc  PythonIPC.cc  Service.cc  extension.cc  main.cc
tests/: CMakeLists.txt  Gemini_test.cc  Nginx_test.cc  README.md  Server_test.cc
tools/: Test.sh  test.ps1
